yaml/ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-ingress-rule
  namespace: dev
spec:
  rules:
    - host: example-dev.neo
      http:
        paths:
          - path: /
            backend:
              serviceName: example-service
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qa-ingress-rule
  namespace: qa
spec:
  rules:
    - host: example-qa.neo
      http:
        paths:
          - path: /
            backend:
              serviceName: example-service
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prod-ingress-rule
  namespace: prod
spec:
  rules:
    - host: example-prod.neo
      http:
        paths:
          - path: /
            backend:
              serviceName: example-service
              servicePort: 80
